--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
+    "@nuxtjs/firebase": "^7.6.1",
     "bootstrap": "^4.6.0",
     "bootstrap-vue": "^2.21.2",
     "chart.js": "^3.5.0",
     "core-js": "^3.15.1",
+    "firebase": "^8.8.1",
     "nuxt": "^2.15.7"
   }
 }
